--- a/project/templates/project/skills.html
+++ b/project/templates/project/skills.html
@@ -1,6 +1,6 @@
 {% extends 'user/base.html' %}
 {% block content %}
-    <div class="skills">
+    <div class="content skills" id="skills">
         <h2>Skills</h2>
         <div class="skill-container">
             {% for skill in skills %}
