--- a/user/templates/user/profile.html
+++ b/user/templates/user/profile.html
@@ -1,6 +1,6 @@
 {% extends 'user/base.html' %}
 {% block content %}
-    <div class="about-me">
+    <div class="content about-me" style="padding: 1%;">
         <h2>About Me</h2>
         <p style="text-align: left;">{{ profile.about }}</p>
         <div class="about-me-info">
