--- a/user/templates/user/testimonies.html
+++ b/user/templates/user/testimonies.html
@@ -44,4 +44,9 @@
             </div>
         </div>
     </div>
+    <div style="text-align: center;">
+        <a href="{% url 'create-testimonial' %}" class="second_testimonial-btn">
+            + Add Testimonial
+        </a>
+    </div>
 {% endblock %}
