--- a/user/static/user/main.css
+++ b/user/static/user/main.css
@@ -1,40 +1,11 @@
+html {
+    scroll-behavior: smooth;
+}
 html , body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
-}
-
-.container {
-    display: flex;
-    justify-content: space-between;
-    margin-left: 50px;
-    margin-bottom: 0px;
-    background-color: #fff;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-}
-
-.profile {
-    text-align: center;
-    width: 30%;
-    padding-top: 2%;
-}
-
-.profile img {
-    border-radius: 10px;
-    width: 100%;
-    max-width: 250px;
-}
-
-.profile h1 {
-    font-size: 24px;
-    margin: 10px 0;
-}
-
-.profile h2 {
-    font-size: 18px;
-    color: #666;
-    margin: 5px 0;
 }
 
 .social-icons {
@@ -59,56 +30,6 @@ html , body {
     color: white;
     text-decoration: none;
     border-radius: 5px;
-}
-
-.content {
-    width: 60%;
-    margin: 0 auto;
-    text-align: center;
-    border: 45px #f4f4f4 solid;
-    overflow-y: auto;
-    min-height: 460px;
-    max-height: 460px;
-} 
-
-.about-me h2 {
-    font-size: 28px;
-    text-align: center;
-    margin-bottom: 15px;
-    border-bottom: 2px solid #ae2727;
-    display: inline-block;
-}
-
-.about-me-info {
-    display: grid;
-    grid-template-columns: 1fr 1fr; /* Two columns */
-    gap: 10px 20px; /* Vertical and horizontal spacing */
-    text-align: left;
-}
-
-.about-me p {
-    margin: 10px 0;
-}
-
-.about-me p strong {
-    color: #ae2727;
-}
-
-.skills h2 {
-    font-size: 28px;
-    margin-bottom: 15px;
-    border-bottom: 2px solid #ae2727;
-    display: inline-block;
-    padding-bottom: 5px;
-    text-align: left;
-}
-
-.skill-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr; /* Two columns layout */
-    gap: 20px;
-    text-align: left;
-    padding: 5%;
 }
 
 .skill {
@@ -153,26 +74,10 @@ html , body {
     text-align: right;
 }
 
-.content h2 {
-    font-size: 28px;
-    margin-bottom: 15px;
-    border-bottom: 2px solid #ae2727;
-    display: inline-block;
-    padding-bottom: 5px;
-    text-align: left;
-}
-
 .project-container {
     width: 90%;
     padding: 2%;
     margin: 0 auto;
-}
-
-/* Project Grid */
-.grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 30px;
 }
 
 /* Project Card */
@@ -186,7 +91,7 @@ html , body {
     transition: transform 1s, opacity 1s; 
 }
 
-  @keyframes slideInLeft {
+@keyframes slideInLeft {
     0% {
         transform: translateX(-100%);
         opacity: 0;
@@ -198,16 +103,16 @@ html , body {
 }
 
 
-  @keyframes slideInRight {
+@keyframes slideInRight {
     0% {
-      transform: translateX(100%);
-      opacity: 0;
+    transform: translateX(100%);
+    opacity: 0;
     }
     100% {
-      transform: translateX(0);
-      opacity: 1;
+    transform: translateX(0);
+    opacity: 1;
     }
-  }
+}
 
 .card-header {
     text-align: center;
@@ -254,20 +159,6 @@ html , body {
 
 .expanded-content {
     display: none;
-}
-
-.add-testimonial-btn {
-    position: absolute;
-    right: 20px;
-    top: 0;
-    padding: 10px 20px;
-    background-color: #d32f2f;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    transition: background-color 0.3s ease;
 }
 
 /* .add-testimonial-btn:hover {
@@ -331,133 +222,456 @@ html , body {
 
 }
 
-.contact-container {
-    max-width: 600px;
-    margin: 50px auto;
+@media (min-width: 992px) {
+    .container {
+        display: flex;
+        justify-content: space-between;
+        margin-left: 50px;
+        margin-bottom: 0px;
+        background-color: #fff;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .profile {
+        text-align: center;
+        width: 30%;
+        padding-top: 2%;
+    }
+
+    .profile img {
+        border-radius: 10px;
+        width: 100%;
+        max-width: 250px;
+    }
+
+    .profile h1 {
+        font-size: 24px;
+        margin: 10px 0;
+    }
+
+    .profile h2 {
+        font-size: 18px;
+        color: #666;
+        margin: 5px 0;
+    }
+
+    .content {
+        width: 60%;
+        margin: 0 auto;
+        text-align: center;
+        border: 45px #f4f4f4 solid;
+        overflow-y: auto;
+        min-height: 460px;
+        max-height: 460px;
+    }
+
+    .content h2 {
+        font-size: 28px;
+        margin-bottom: 15px;
+        border-bottom: 2px solid #ae2727;
+        display: inline-block;
+        padding-bottom: 5px;
+        text-align: left;
+    }
+
+    .about-me-info {
+        display: grid;
+        grid-template-columns: 1fr 1fr; /* Two columns */
+        gap: 10px 20px; /* Vertical and horizontal spacing */
+        text-align: left;
+    }
+
+    .about-me p {
+        margin: 10px 0;
+    }
+
+    .about-me p strong {
+        color: #ae2727;
+    }
+
+    .skill-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr; /* Two columns layout */
+        gap: 20px;
+        text-align: left;
+        padding: 5%;
+    }
+
+    /* Project Grid */
+    .grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 30px;
+    }
+
+    .add-testimonial-btn {
+        position: absolute;
+        right: 20px;
+        top: 0;
+        padding: 10px 20px;
+        background-color: #d32f2f;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 16px;
+        transition: background-color 0.3s ease;
+    }
+    
+    .contact-container {
+        max-width: 600px;
+        margin: 50px auto;
+    }
+
+    /* General styling for all messages */
+    .alert {
+        padding: 15px;
+        margin: 20px 0;
+        border-radius: 5px;
+        font-family: Arial, sans-serif;
+        font-size: 16px;
+        color: #fff;
+        position: relative;
+        max-width: 600px;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+    }
+
+    /* Close button for dismissing the message */
+    .alert .close {
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        font-size: 20px;
+        cursor: pointer;
+        color: inherit;
+    }
+
+    /* Success message */
+    .alert.success {
+        background-color: #4CAF50;
+        border-left: 5px solid #2E7D32;
+    }
+ 
+    .fixed-nav {
+        position: fixed;
+        right: 20px;
+        top: 50%;
+        transform: translateY(-50%);
+        display: flex;
+        flex-direction: column;
+    }
+
+    .nav-button {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        width: 45px;
+        height: 45px;
+        margin: 8px 0;
+        background-color: #fff;
+        color: #ae2727;
+        border: 2px solid #ddd;
+        border-radius: 8px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        text-decoration: none;
+        transition: all 0.3s ease;
+        overflow: hidden;
+        position: relative;
+        white-space: nowrap;
+    }
+
+    .nav-button:hover {
+        background-color: #ae2727;
+        color: #fff;
+        border-color: #ae2727;
+        width: 150px; /* Expand width on hover */
+    }
+
+    /* Icon container */
+    .icon-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 50px;
+        height: 50px;
+        transition: color 0.3s ease;
+        pointer-events: none;
+        margin-left: 23%
+    }
+
+    .nav-button i {
+        font-size: 22px;
+        transition: color 0.3s ease;
+    }
+
+    .nav-button:hover i {
+        transform: translateX(-30px);
+    }
+
+    /* Hidden text */
+    .icon-text {
+        opacity: 0;
+        font-size: 16px;
+        margin-left: 10px;
+        color: #fff;
+        transition: opacity 0.3s ease, transform 0.3s ease;
+        transform: translateX(-20px); /* Hide text off-screen initially */
+    }
+
+    /* Reveal text on hover */
+    .nav-button:hover .icon-text {
+        opacity: 1;
+        transform: translateX(-20px); /* Slide text into view */
+    }
 }
 
-/* General styling for all messages */
-.alert {
-    padding: 15px;
-    margin: 20px 0;
-    border-radius: 5px;
-    font-family: Arial, sans-serif;
-    font-size: 16px;
-    color: #fff;
-    position: relative;
-    max-width: 600px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-}
+@media (max-width: 575.98px) {
+    .container {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        /* margin-left: 1rem; */
+        margin: 0px;
+        width: 100%;
+        background-color: #fff;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    }
 
-/* Close button for dismissing the message */
-.alert .close {
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    font-size: 20px;
-    cursor: pointer;
-    color: inherit;
-}
+    .profile {
+        text-align: center;
+        width: 100%;
+        /* padding-top: 2%; */
+    }
 
-/* Success message */
-.alert.success {
-    background-color: #4CAF50;
-    border-left: 5px solid #2E7D32;
-}
+    .image-overlay-container {
+        position: relative;
+        width: 100%;
+        max-width: 500px;
+        margin: 0;
+      }
 
-/* Error message */
-.alert.error {
-    background-color: #F44336;
-    border-left: 5px solid #C62828;
-}
+    .profile img {
+        border-radius: 5px;
+        width: 100%;
+        /* max-width: 250px; */
+        display: block;
+        height: auto;
+    }
 
-/* Warning message */
-.alert.warning {
-    background-color: #FF9800;
-    border-left: 5px solid #EF6C00;
-}
+    .image-text {
+        position: absolute;
+        top: 90%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 100%;
+        color: white;
+        /* font-size: 24px; */
+        font-weight: bold;
+        text-shadow: 2px 2px 5px black;
+    }  
 
-/* Info message */
-.alert.info {
-    background-color: #2196F3;
-    border-left: 5px solid #1E88E5;
-}
+    .profile h1 {
+        font-size: 25px;
+        margin: 1em 0;
+    }
 
-.fixed-nav {
-    position: fixed;
-    right: 20px;
-    top: 50%;
-    transform: translateY(-50%);
-    display: flex;
-    flex-direction: column;
-}
+    .profile h2 {
+        font-size: 15px;
+        color: #666;
+        margin: 1em 0;
+    }
 
-.nav-button {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    width: 45px;
-    height: 45px;
-    margin: 8px 0;
-    background-color: #fff;
-    color: #ae2727;
-    border: 2px solid #ddd;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    text-decoration: none;
-    transition: all 0.3s ease;
-    overflow: hidden;
-    position: relative;
-    white-space: nowrap;
-}
+    .content {
+        width: 100%;
+        margin: 0 auto;
+        text-align: center;
+        border: 0.3rem #f4f4f4 solid;
+        /* padding: 10rem;  */
+        overflow-y: auto;
+        min-height: 460px;
+        max-height: 460px;
+    }
 
-.nav-button:hover {
-    background-color: #ae2727;
-    color: #fff;
-    border-color: #ae2727;
-    width: 150px; /* Expand width on hover */
-}
+    .content h2 {
+        font-size: 1.5rem;
+        margin-bottom: 0.5rem;
+        border-bottom: 2px solid #ae2727;
+        display: inline-block;
+        text-align: left;
+    }
 
-/* Icon container */
-.icon-wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 50px;
-    height: 50px;
-    transition: color 0.3s ease;
-    pointer-events: none;
-    margin-left: 23%
-}
+    /* .about-me {
+        margin: 50px;
+    } */
 
-.nav-button i {
-    font-size: 22px;
-    transition: color 0.3s ease;
-}
+    .about-me-info {
+        padding-left: 2%;
+        text-align: left;
+    }
 
-.nav-button:hover i {
-    transform: translateX(-30px);
-}
+    .about-me p {
+        margin: 10px 0;
+    }
 
-/* Hidden text */
-.icon-text {
-    opacity: 0;
-    font-size: 16px;
-    margin-left: 10px;
-    color: #fff;
-    transition: opacity 0.3s ease, transform 0.3s ease;
-    transform: translateX(-20px); /* Hide text off-screen initially */
-}
+    .about-me p strong {
+        color: #ae2727;
+    }
 
-/* Reveal text on hover */
-.nav-button:hover .icon-text {
-    opacity: 1;
-    transform: translateX(-20px); /* Slide text into view */
-}
+    .skill-container {
+        display: grid;
+        grid-template-columns: 1fr; /* Two columns layout */
+        gap: 20px;
+        text-align: left;
+        padding: 5%;
+    }
 
-/* <a href="{% url 'skills' %}#skills">skills</a>
-<a href="{% url 'projects' %}#projects">projects</a>
-<a href="{% url 'experience' %}#experience">experience</a>
-<a href="{% url 'testimonials' %}#testimonials">testimonials</a> */
+    .project-container {
+        width: 90%;
+        padding: 2%;
+        margin: 0 auto;
+    }
+
+    /* Project Grid */
+    .grid {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 30px;
+    }
+
+    /* .add-testimonial-btn {
+        position: absolute;
+        right: 20px;
+        top: 0;
+        padding: 10px 20px;
+        background-color: #d32f2f;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 16px;
+        transition: background-color 0.3s ease;
+    } */
+
+    .second_testimonial-btn {
+        padding: 10px 20px;
+        background-color: #d32f2f;
+        width: 10rem;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 16px;
+        transition: background-color 0.3s ease;
+        
+    }
+
+    .contact-container {
+        max-width: 600px;
+        margin: 50px auto;
+    }
+
+    /* General styling for all messages */
+    .alert {
+        padding: 15px;
+        margin: 20px 0;
+        border-radius: 5px;
+        font-family: Arial, sans-serif;
+        font-size: 16px;
+        color: #fff;
+        position: relative;
+        max-width: 600px;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+    }
+
+    /* Close button for dismissing the message */
+    .alert .close {
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        font-size: 20px;
+        cursor: pointer;
+        color: inherit;
+    }
+
+    /* Success message */
+    .alert.success {
+        background-color: #4CAF50;
+        border-left: 5px solid #2E7D32;
+    }
+ 
+    .fixed-nav {
+        position: fixed;
+        right: 5px;
+        top: 50%;
+        transform: translateY(-50%);
+        display: flex;
+        flex-direction: column;
+    }
+
+    .nav-button {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        width: 30px;
+        height: 30px;
+        margin: 8px 0;
+        background-color: #fff;
+        color: #ae2727;
+        border: 2px solid #ddd;
+        border-radius: 8px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        text-decoration: none;
+        transition: all 0.3s ease;
+        overflow: hidden;
+        position: relative;
+        white-space: nowrap;
+    }
+
+    .nav-button:hover {
+        background-color: #ae2727;
+        color: #fff;
+        border-color: #ae2727;
+        width: 125px; /* Expand width on hover */
+    }
+
+    /* Icon container */
+    .icon-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 40px;
+        height: 40px;
+        transition: color 0.3s ease;
+        pointer-events: none;
+        margin-left: 15%
+    }
+
+    .nav-button i {
+        font-size: 20px;
+        transition: color 0.3s ease;
+    }
+
+    .nav-button:hover i {
+        transform: translateX(-15px);
+    }
+
+    /* Hidden text */
+    .icon-text {
+        opacity: 0;
+        font-size: 14px;
+        margin-left: 10px;
+        color: #fff;
+        transition: opacity 0.3s ease, transform 0.3s ease;
+        transform: translateX(-20px); /* Hide text off-screen initially */
+    }
+
+    /* Reveal text on hover */
+    .nav-button:hover .icon-text {
+        opacity: 1;
+        transform: translateX(-10px); /* Slide text into view */
+    }
+}
