--- a/user/templates/user/profile.html
+++ b/user/templates/user/profile.html
@@ -2,7 +2,7 @@
 {% block content %}
     <div class="content about-me" style="padding: 1%;">
         <h2>About Me</h2>
-        <div class="skill-container">
+        <div class="">
             <p style="text-align: left;">{{ profile.about }}</p>
             <div class="about-me-info">
                 <div>
