--- a/user/static/user/main.css
+++ b/user/static/user/main.css
@@ -222,12 +222,19 @@ html , body {
 
 }
 
-@media (min-width: 992px) {
+.footer-div {
+    background-color: #ae2727; 
+    line-height: 1rem;
+    padding: 2%;
+}
+
+@media (min-width: 768px) {
     .container {
         display: flex;
         justify-content: space-between;
         margin-left: 50px;
         margin-bottom: 0px;
+        margin-right: 0;
         background-color: #fff;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     }
@@ -316,6 +323,10 @@ html , body {
         cursor: pointer;
         font-size: 16px;
         transition: background-color 0.3s ease;
+    }
+
+    .second-testimonial-btn {
+        display: none;
     }
     
     .contact-container {
@@ -540,21 +551,14 @@ html , body {
         gap: 30px;
     }
 
-    /* .add-testimonial-btn {
-        position: absolute;
-        right: 20px;
-        top: 0;
-        padding: 10px 20px;
-        background-color: #d32f2f;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        font-size: 16px;
-        transition: background-color 0.3s ease;
-    } */
+    .second-btn-container {
+        width: 90%;
+        padding: 5%;
+        /* margin: 0 auto; */
+        text-align: center;
+    }
 
-    .second_testimonial-btn {
+    .second-testimonial-btn {
         padding: 10px 20px;
         background-color: #d32f2f;
         width: 10rem;
@@ -565,6 +569,10 @@ html , body {
         font-size: 16px;
         transition: background-color 0.3s ease;
         
+    }
+
+    .add-testimonial-btn {
+        display: none;
     }
 
     .contact-container {
