--- a/user/templates/user/testimonies.html
+++ b/user/templates/user/testimonies.html
@@ -44,8 +44,8 @@
             </div>
         </div>
     </div>
-    <div style="text-align: center;">
-        <a href="{% url 'create-testimonial' %}" class="second_testimonial-btn">
+    <div class="second-btn-container">
+        <a href="{% url 'create-testimonial' %}" class="second-testimonial-btn">
             + Add Testimonial
         </a>
     </div>
