--- a/user/templates/user/base.html
+++ b/user/templates/user/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load cloudinary %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -27,7 +28,7 @@
                 <a href="https://wa.me/2347019862371"><i class="fa-brands fa-square-whatsapp"></i></a>
             </div>
             <div class="buttons">
-                <a href="{% url 'download-resume' file_name='oladotun-kolapo-resume.pdf' %}" class="btn">Download Resume</a>
+                <a href="{% url 'download-resume' public_id='OLADOTUN_OLUMOROTI_KOLAPO.pdf' %}" class="btn">Download Resume</a>
                 <a href="{% url 'contact-me' %}" class="btn">Contact Me</a>
             </div>
         </div>
